--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
     a{line-height: 30px; height: 30px; display: block; width: 500px; margin: 0 auto; text-align: center;}
 </style>
 <h2>wfQuery </h2>
-<a href="demo/1.query.html">1.query.html</a><a href="demo/2.event.html">2.event.html</a><a href="demo/3.option.html">3.option.html</a><a href="demo/4.require.html">4.require.html</a>
+<a href="demo/1.query.html">1.query.html</a><a href="demo/2.event.html">2.event.html</a><a href="demo/3.option.html">3.option.html</a><a href="demo/4.require.html">4.require.html</a><a href="demo/5.ajax.html">5.ajax.html</a>
