--- a/demo/3.option.html
+++ b/demo/3.option.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>//demo/3.option.html</title>
-    <script src="../js/wfQuery.js"></script>
+    <script src="../js/wfQuery.js?debug=&_t=1416757865198"></script>
 	<!-- <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> -->
     <style>
     pre.code{background: #d2d2d2;padding: 4px;}
