--- a/demo/3.option.html
+++ b/demo/3.option.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>//demo/3.option.html</title>
-    <script src="../js/wfQuery.js?debug=&_t=1416757865198"></script>
+    <script src="../js/wfQuery.js?debug=&_t=1416819796450"></script>
 	<!-- <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> -->
     <style>
     pre.code{background: #d2d2d2;padding: 4px;}
@@ -193,5 +193,6 @@ $('.text-in').on('click',function(){ emp.text( prompt('text 输入: ') ); });
 
 </script>
 
+<a href="https://github.com/shy2850/wfQuery.git" target="_"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 </body>
 </html>
