增加数据绑定

--- a/README.html
+++ b/README.html
@@ -3,3 +3,5 @@
 <p>like jQuery but just for HTML5 or </p>
 
 <p>依赖: <a href="https://github.com/shy2850/node-server">f2e-server</a> 开发、运行、测试和打包。</p>
+
+<p>DEMO: <a href="http://shy2850.github.io/wfQuery/">http://shy2850.github.io/wfQuery/</a></p>
