--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 </style>
 <h2>wfQuery </h2>
 <a href="https://github.com/shy2850/wfQuery.git" target="_"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
-<a href="demo/1.query.html">1.query.html</a><a href="demo/2.event.html">2.event.html</a><a href="demo/3.option.html">3.option.html</a><a href="demo/4.require.html">4.require.html</a><a href="demo/5.ajax.html">5.ajax.html</a>
+<a href="demo/1.query.html">1.query.html</a><a href="demo/2.event.html">2.event.html</a><a href="demo/3.option.html">3.option.html</a><a href="demo/4.require.html">4.require.html</a><a href="demo/5.ajax.html">5.ajax.html</a><a href="demo/6.data.html">6.data.html</a>
