http://apps.bdimg.com/libs/fontawesome/4.2.0/css/font-awesome.min.css

--- a/demo/8.wfEditor.html
+++ b/demo/8.wfEditor.html
@@ -1,6 +1,6 @@
 $belong[layout.html]
 	<link rel="stylesheet" href="//apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="//apps.bdimg.com/libs/fontawesome/4.2.0/css/font-awesome.min.css">
 	<style>
 		body {
 			background-color: #666;
