--- a/demo/8.wfEditor.html
+++ b/demo/8.wfEditor.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>//demo/8.wfEditor.html</title>
-    <script src="../js/wfQuery.js?debug=&_t=1417159174018"></script>
+    <script src="../js/wfQuery.js?debug=&_t=1417160316496"></script>
 	<!-- <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> -->
     <style>
     pre.code{background: #d2d2d2;padding: 4px;}
@@ -13,7 +13,7 @@
 <a href="../index.html">返回首页</a>
 
 	<link rel="stylesheet" href="//apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="//apps.bdimg.com/libs/fontawesome/4.2.0/css/font-awesome.min.css">
 	<style>
 		body {
 			background-color: #666;
