--- a/demo/9.chatRoom.html
+++ b/demo/9.chatRoom.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>//demo/9.chatRoom.html</title>
-    <script src="../js/wfQuery.js?debug=&_t=1420074735992"></script>
+    <script src="../js/wfQuery.js?debug=&_t=1420076481783"></script>
 	<!-- <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> -->
     <style>
     pre.code{background: #d2d2d2;padding: 4px;}
@@ -28,8 +28,12 @@
 </div>
 <script>
 (function($) {
-	var root = "http://182.92.234.110:8973";
-	var time = "", chat = $("#chat");
+	//var root = "http://182.92.234.110:8973";
+	var root = "http://localhost:8973";
+	var time = "", chat = $("#chat"), name;
+
+	while( !(name = window.prompt("请输入你的昵称进入聊天室!")) || name.match(/\s+/) );
+	$("#name").val(name);
 
 	$("#form").on("submit",function(e){
 		e.preventDefault();
@@ -60,6 +64,14 @@
 	}
 
 	window.get();
+
+	window.onbeforeunload = function(){
+		$.jsonp(root,{
+			name:$("#name").val(),
+			method:"exit",
+			time: time
+		});
+	};
 })(wfQuery)
 </script>
 <a href="https://github.com/shy2850/wfQuery.git" target="_"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
