--- a/demo/9.chatRoom.html
+++ b/demo/9.chatRoom.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>//demo/9.chatRoom.html</title>
-    <script src="../js/wfQuery.js?debug=&_t=1420076481783"></script>
+    <script src="../js/wfQuery.js?debug=&_t=1420076765972"></script>
 	<!-- <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> -->
     <style>
     pre.code{background: #d2d2d2;padding: 4px;}
@@ -28,8 +28,8 @@
 </div>
 <script>
 (function($) {
-	//var root = "http://182.92.234.110:8973";
-	var root = "http://localhost:8973";
+	var root = "http://182.92.234.110:8973";
+	//var root = "http://localhost:8973";
 	var time = "", chat = $("#chat"), name;
 
 	while( !(name = window.prompt("请输入你的昵称进入聊天室!")) || name.match(/\s+/) );
