--- a/demo/9.chatRoom.html
+++ b/demo/9.chatRoom.html
@@ -15,8 +15,8 @@ $belong[layout.html]
 </div>
 <script>
 (function($) {
-	//var root = "http://182.92.234.110:8973";
-	var root = "http://localhost:8973";
+	var root = "http://182.92.234.110:8973";
+	//var root = "http://localhost:8973";
 	var time = "", chat = $("#chat"), name;
 
 	while( !(name = window.prompt("请输入你的昵称进入聊天室!")) || name.match(/\s+/) );
