--- a/demo/10.arrangement.html
+++ b/demo/10.arrangement.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>图片排列</title>
+	<meta charset="UTF-8">
+	<title>//demo/10.arrangement.html</title>
+    <script src="../js/wfQuery.js?debug=&_t=1420204058867"></script>
+	<!-- <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> -->
+    <style>
+    pre.code{background: #d2d2d2;padding: 4px;}
+    </style>
+</head>
+<body>
+<a href="../index.html">返回首页</a>
+
     <link rel="stylesheet" href="arrangement/phone.css">
     <style>
         body{
@@ -17,8 +26,6 @@
             width: 70px;
         }
     </style>
-</head>
-<body>
     <h2> 
         <input type="file" name="files" id="files" placeholder="点击上传文件" multiple accept="images/*">
         或 拖拽文件到屏幕
@@ -32,9 +39,7 @@
         </div>
         <div class="footer"></div>
     </div>
-
-
-
-<script src="//apps.bdimg.com/libs/require.js/2.1.11/require.min.js" data-main="arrangement/main.js?debug=true"></script>
+    <script src="arrangement/main.js"></script>
+<a href="https://github.com/shy2850/wfQuery.git" target="_"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 </body>
 </html>
