修改同步引入

--- a/demo/10.arrangement.html
+++ b/demo/10.arrangement.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>图片排列</title>
+$belong[layout.html]
     <link rel="stylesheet" href="arrangement/phone.css">
     <style>
         body{
@@ -17,8 +13,6 @@
             width: 70px;
         }
     </style>
-</head>
-<body>
     <h2> 
         <input type="file" name="files" id="files" placeholder="点击上传文件" multiple accept="images/*">
         或 拖拽文件到屏幕
@@ -32,9 +26,4 @@
         </div>
         <div class="footer"></div>
     </div>
-
-
-
-<script src="//apps.bdimg.com/libs/require.js/2.1.11/require.min.js" data-main="arrangement/main.js?debug=true"></script>
-</body>
-</html>
+    <script src="arrangement/main.js"></script>
