修改图片排列demo

--- a/demo/10.arrangement.html
+++ b/demo/10.arrangement.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>//demo/10.arrangement.html</title>
-    <script src="../js/wfQuery.js?debug=&_t=1420204058867"></script>
+    <script src="../js/wfQuery.js?debug=&_t=1420263983115"></script>
 	<!-- <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> -->
     <style>
     pre.code{background: #d2d2d2;padding: 4px;}
@@ -34,7 +34,7 @@
         <div class="header"></div>
         <div class="screen" style="height:600px;">
             <ul id="main-screen">
-                
+                <li class="item size-6-4"><img src="arrangement/images/QQ截图20141225220709.png" alt="QQ截图20141225220709.png" style="width: 335%; left: -580px; top: -9px;"></li><li class="item"><img src="arrangement/images/QQ截图20141228203021.png" alt="QQ截图20141228203021.png" style="width: 190%;"></li><li class="item"><img src="arrangement/images/0.gif" alt="0.gif"></li><li class="item size-3-2"><img src="arrangement/images/QQ截图20141130150313.png" alt="QQ截图20141130150313.png" style="width: 115%; left: -21px; top: -24px;"></li><li class="item size-1_5-1"><img src="arrangement/images/post.png" alt="post.png" style="width: 120%; left: 0px; top: 0px;"></li><li class="item size-1_5-1"><img src="arrangement/images/QQ截图20141109075229.png" alt="QQ截图20141109075229.png" style="left: 0px; top: 0px;"></li><li class="item size-1_5-1"><img src="arrangement/images/wKhTg1R5ZukEAAAAAAAAAAAAAAA721.jpg" alt="wKhTg1R5ZukEAAAAAAAAAAAAAAA721.jpg" style="left: 0px; top: 0px;"></li><li class="item size-3-1"><img src="arrangement/images/u=2860238764,2697430135&amp;fm=96.jpg" alt="u=2860238764,2697430135&amp;fm=96.jpg" style="width: 100%; left: -3px; top: -31px;"></li>
             </ul>
         </div>
         <div class="footer"></div>
