添加template-init测试demo，并修复事件绑定的bug

--- a/layout.html
+++ b/layout.html
@@ -4,7 +4,10 @@
 	<meta charset="UTF-8">
 	<title><%=request.$.title%></title>
     <script src="../js/wfQuery.js?debug=<%=request.data.debug%>&_t=<%=+new Date%>"></script>
-	<!-- <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> -->
+	<!-- 
+    <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> 
+    <script>wfQuery = jQuery</script>
+    -->
     <style>
     pre.code{background: #d2d2d2;padding: 4px;}
     </style>
