--- a/demo/01.query.html
+++ b/demo/01.query.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>//demo/01.query.html</title>
-    <script src="../js/wfQuery.js?debug=&_t=1420336950761"></script>
-	<!-- <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> -->
+    <script src="../js/wfQuery.js?debug=&_t=1422166111001"></script>
+	<!-- 
+    <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> 
+    <script>wfQuery = jQuery</script>
+    -->
     <style>
     pre.code{background: #d2d2d2;padding: 4px;}
     </style>
