对应 f2e-server 模板修改

--- a/demo/10.arrangement.html
+++ b/demo/10.arrangement.html
@@ -1,5 +1,5 @@
 $belong[layout.html]
-    <link rel="stylesheet" href="arrangement/phone.css">
+    <link rel="stylesheet" href="arrangement/phone.less">
     <style>
         body{
             background: #272822;
