--- a/demo/08.wfEditor.html
+++ b/demo/08.wfEditor.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>//demo/08.wfEditor.html</title>
-    <script src="../js/wfQuery.js?debug=&_t=1422166111049"></script>
+	<title>/demo/08.wfEditor.html</title>
+    <script src="../js/wfQuery.js?debug=&_t=1428995516873"></script>
 	<!-- 
     <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> 
     <script>wfQuery = jQuery</script>
