--- a/demo/02.event.html
+++ b/demo/02.event.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>//demo/02.event.html</title>
-    <script src="../js/wfQuery.js?debug=&_t=1422166111004"></script>
+	<title>/demo/02.event.html</title>
+    <script src="../js/wfQuery.js?debug=&_t=1428995516860"></script>
 	<!-- 
     <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> 
     <script>wfQuery = jQuery</script>
