--- a/demo/10.arrangement.html
+++ b/demo/10.arrangement.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>//demo/10.arrangement.html</title>
-    <script src="../js/wfQuery.js?debug=&_t=1422166111051"></script>
+	<title>/demo/10.arrangement.html</title>
+    <script src="../js/wfQuery.js?debug=&_t=1428995516881"></script>
 	<!-- 
     <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> 
     <script>wfQuery = jQuery</script>
@@ -15,7 +15,7 @@
 <body>
 <a href="../index.html">返回首页</a>
 
-    <link rel="stylesheet" href="arrangement/phone.css">
+    <link rel="stylesheet" href="arrangement/phone.less">
     <style>
         body{
             background: #272822;
