--- a/demo/04.require.html
+++ b/demo/04.require.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>/demo/04.require.html</title>
+    <title>/github/wfQuery//demo/04.require.html</title>
     <script src="http://apps.bdimg.com/libs/require.js/2.1.11/require.min.js"></script>
     <style>
     pre.code{background: #d2d2d2;padding: 4px;}
