--- a/README.html
+++ b/README.html
@@ -1,7 +1,4 @@
-<style>code{padding:2px 8px;background:#eee;}</style><h1>wfQuery</h1>
-
+<h1 id="wfquery">wfQuery</h1>
 <p>like jQuery but just for HTML5 or </p>
-
 <p>依赖: <a href="https://github.com/shy2850/node-server">f2e-server</a> 开发、运行、测试和打包。</p>
-
 <p>DEMO: <a href="http://shy2850.github.io/wfQuery/">http://shy2850.github.io/wfQuery/</a></p>
