--- a/demo/09.chatRoom.html
+++ b/demo/09.chatRoom.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>/demo/09.chatRoom.html</title>
-    <script src="../js/wfQuery.js?debug=&_t=1429008357036"></script>
+	<title>/github/wfQuery//demo/09.chatRoom.html</title>
+    <script src="../js/wfQuery.js?debug=&_t=1438487411580"></script>
 	<!-- 
     <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> 
     <script>wfQuery = jQuery</script>
