event return false Signed-off-by: shy2850 <shy2850@163.com>

--- a/demo/05.ajax.html
+++ b/demo/05.ajax.html
@@ -90,6 +90,7 @@ $.ajax({
 
 $("#form0").on("submit",function(e){
     /*该方法执行需要f2e-server服务器支持*/
+    return false;
     $.ajax({
         url: "/upload?target=demo/data/upload.json&uploadUrl=demo/data/",
         type: "post",
@@ -101,7 +102,7 @@ $("#form0").on("submit",function(e){
             alert( 'wrong' )
         }
     });
-    e.preventDefault();
+    
 });
 
 
