--- a/demo/05.ajax.html
+++ b/demo/05.ajax.html
@@ -97,7 +97,7 @@ $("#form0").on("submit",function(e){
         type: "post",
         form: this,
         data:{
-            axx: $("#file")[0].fileList
+            axx: $("#axx")[0].fileList
         },
         success: function( json ){
             console.log( json );
