--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>wfQuery test</title>
     <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.19.0.css">
+    <style>
+        #main h2{line-height: 30px;}
+    </style>
 </head>
 <body>
     <div id="qunit"></div>
