--- a/demo/04.require.html
+++ b/demo/04.require.html
@@ -34,7 +34,7 @@
 <button id="exec">模拟</button>
 
 <script class="code">
-require(['../js/wfQuery'],function($){
+require(['../wfQuery'],function($){
     $.fn.Select = function(){
         return this.each(function(){
             var select = this, index = select.children[select.selectedIndex];
