--- a/demo/layout.html
+++ b/demo/layout.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title><%=request.$.title%></title>
-    <script src="../js/wfQuery.js?debug=<%=request.data.debug%>&_t=<%=+new Date%>"></script>
+    <script src="../wfQuery.js?debug=<%=request.data.debug%>&_t=<%=+new Date%>"></script>
 	<!-- 
     <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> 
     <script>wfQuery = jQuery</script>
