--- a/demo/06.data.html
+++ b/demo/06.data.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>/github/wfQuery//demo/06.data.html</title>
-    <script src="../js/wfQuery.js?debug=&_t=1438487411574"></script>
+	<title>/github/wfQuery///demo/06.data.html</title>
+    <script src="../wfQuery.js?debug=&_t=1444307430752"></script>
 	<!-- 
     <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> 
     <script>wfQuery = jQuery</script>
