Signed-off-by: shy2850 <shy2850@163.com>

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <span>包括append/prepend/before/after/remove等</span>
             </li>
             <li>
-                <input type="checkbox" name="m" id="event" value="evnet">
+                <input type="checkbox" name="m" id="event" value="event">
                 <label for="event">event</label>
                 <span>包括on/off/trigger等</span>
             </li>
