--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         </p>
     </form>
     <a href="https://github.com/shy2850/wfQuery.git" target="_"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
+    <a href="test/index.html">测试用例</a>
+    <a href="test/amd.html">测试用例(AMD)</a>
     <%
         return function(){
             var fs = require("fs");
@@ -64,7 +66,7 @@
                 }else{
                     files.map(function(file){
                         if( file.match(/^\d+\./) ){
-                            __p += '<a href="demo/'+file+'">'+file+'</a>';
+                            __p += '<a href="demo/'+file+'" target="_blank">'+file+'</a>';
                         }
                     });
                 }
