--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>wfQuery</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="wfQuery.js 追求极致简单和方便的移动端jQuery类库">
+    <meta name="keywords" content="wfquery,jquery,zepto,js类库,">
     <style>
         p,h2{text-align: center;}
         ul{width: 500px;margin: 0 auto;position: relative; left: 100px;}
@@ -11,7 +14,15 @@
     </style>
 </head>
 <body>
-    <h2>wfQuery </h2>
+    <h2>wfQuery 一个简单的jQuery-API实现</h2>
+    <ul>
+        <li>基于Array.prototype</li>
+        <li>选择器直接使用 querySelectorAll</li>
+        <li>事件绑定仅支持 on/off/trigger, 支持代理(阻止事件冒泡)</li>
+        <li>不支持 animate 相关</li>
+        <li>Ajax支持基于ajax2.0的文件上传和进度设置</li>
+    </ul>
+    <p>下载</p>
     <form action="wfQuery.js" target="_blank">
         <ul>
             <li>
