--- a/demo/layout.html
+++ b/demo/layout.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title><%=request.$.title%></title>
-    <script src="../wfQuery.js?debug=<%=request.data.debug%>&_t=<%=+new Date%>"></script>
+	<title><%=pathname%></title>
+    <script src="../wfQuery.js?_t=<%=+new Date%>"></script>
 	<!-- 
     <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script> 
     <script>wfQuery = jQuery</script>
@@ -18,10 +18,3 @@ $[placeholder]
 <a href="https://github.com/shy2850/wfQuery.git" target="_"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 </body>
 </html>
-<%
-    var pre = require('../plugins/prettify.js');
-    __p = __p.replace(/\<script\s+class="code".*\>([\s\S]*?)\<\/script\>/,function(all,code){
-        var res = pre.parse(code);
-        return '<style>'+res.style+'</style>' + '<pre class="code">' + res.output + '</pre>' + all;
-    });
-%>
