--- a/demo/09.chatRoom.html
+++ b/demo/09.chatRoom.html
@@ -31,7 +31,7 @@
 </div>
 <script>
 (function($) {
-	var root = "http://182.92.234.110:8973";
+	var root = "http://webfuture.cn:8973";
 	//var root = "http://localhost:8973";
 	var time = "", chat = $("#chat"), name;
 
